# notification_service

./: .gitignore  pyproject.toml
app/: admin.py  validators.py
app/migrations/: 0001_initial.py
app/models/: __init__.py  client.py  mailing.py  message.py
notification_service/: settings.py
