[tool.poetry]
name = "notification-service"
version = "0.1.0"
description = ""
authors = ["Артем Пелёвин artempelevin@list.ru"]
readme = "README.md"
packages = [{include = "notification_service"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-simplify = "^0.19.3"
flake8-functions = "^0.0.7"
flake8-variables-names = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
